# ballot-contract

./: Cargo.toml  README.md
src/: lib.rs  storage.rs  test.rs  validation.rs
